Fixed clickable bg link bug, and added initial opacity to make the sidebar inivisible on page load

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,6 +29,7 @@ body {
 }
 
 .header-sidebar {
+    opacity: 0;
     transform: perspective(1000px) rotateY(-90deg);
     height: 85vh;
     position: absolute;
@@ -39,7 +40,8 @@ body {
 
     background-color: rgb(34, 34, 34, .9);
     transform-origin: right;
-    transition: transform 400ms $alt-ease;
+    transition: transform 400ms $alt-ease,
+                opacity 400ms $alt-ease;
 
     &-list {
         width: 100%;
@@ -49,8 +51,6 @@ body {
         justify-content: space-around;
         align-items: center;
         list-style-type: none;
-
-
     }
 
     &-item {
@@ -72,6 +72,7 @@ body {
 }
 
 .header-sidebar.active {
+    opacity: 1;
     transform: perspective(0) rotateY(0);
 }
 
@@ -80,6 +81,7 @@ body {
 }
 
 .main {
+    pointer-events: none;
     height: 60vh;
     display: flex;
     flex-direction: column;
